--- a/www/.gitignore
+++ b/www/.gitignore
@@ -1,8 +1,6 @@
-/bootstrap/compiled.php
-/vendor
-composer.phar
-composer.lock
-.env.*.php
-.env.php
-.DS_Store
-Thumbs.db
+laravel/composer.phar
+laravel/composer.lock
+laravel/.env.*.php
+laravel/.env.php
+laravel/.DS_Store
+laravel/Thumbs.db
