--- a/www/public_html/onlinetest/package.json
+++ b/www/public_html/onlinetest/package.json
@@ -30,6 +30,7 @@
     "gulp-livereload": "^3.7.0",
     "gulp-minify-css": "^0.4.5",
     "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^1.0.0-alpha.3"
   }
 }
