Ignore all .sass-cache folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 /www/public_html/onlinetest/node_modules/*
 /html
-www/laravel4/vendor
-www/laravel4/composer.phar
-www/laravel4/composer.lock
-www/laravel4/.env.*.php
-www/laravel4/.env.php
-www/laravel4/.DS_Store
-www/laravel4/Thumbs.db
-www/laravel4/bootstrap/paths.php
-www/laravel4/bootstrap/compiled.php
-www/public_html/onlinetest/.sass-cache/
-www/public_html/onlinetest/node_modules/
-www/laravel4/app/dev/sass/min/
+/www/laravel4/vendor
+/www/laravel4/composer.phar
+/www/laravel4/composer.lock
+/www/laravel4/.env.*.php
+/www/laravel4/.env.php
+/www/laravel4/.DS_Store
+/www/laravel4/Thumbs.db
+/www/laravel4/bootstrap/paths.php
+/www/laravel4/bootstrap/compiled.php
+.sass-cache/
+/www/public_html/onlinetest/node_modules/
+/www/laravel4/app/dev/sass/min/
