--- a/www/public_html/onlinetest/package.json
+++ b/www/public_html/onlinetest/package.json
@@ -34,5 +34,10 @@
     "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "^1.0.0-alpha.3",
     "gulp-uglify": "^1.1.0"
+  },
+  "devDependencies": {
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "vinyl-paths": "^1.0.0"
   }
 }
