Separate reset css (Normalize and html5boilerplate css) to separate file to fix cascading stlye bug and track reset.min.css

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,6 @@
 !/www/public_html/onlinetest/adminer.php
 !/www/public_html/onlinetest/index.php
 !/www/public_html/onlinetest/doc
+!/www/public_html/onlinetest/style/reset.min.css
 !.gitkeep
 
