--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@
 /www/public_html/onlinetest/node_modules/
 /www/laravel4/app/dist/style/temp
 /www/laravel4/app/dist/script/temp
+/www/laravel4/vendor
+/www/laravel4/bootstrap/compiled.php
+/www/public_html/onlinetest/*
+!/www/public_html/onlinetest/gulpfile.js
+!/www/public_html/onlinetest/package.json
+!/www/public_html/onlinetest/crossdomain.xml
+!/www/public_html/onlinetest/adminer.php
+!/www/public_html/onlinetest/index.php
+!/www/public_html/onlinetest/doc
+!.gitkeep
+
